# maramax

./: .gitignore  CLAUDE.md  README.md  build_app.sh  pyproject.toml  requirements.txt  run.sh
packaging/: maramax_app.py  setup.py
src/parakeet_dictation/: app.py  clipboard.py  config.py  export.py  history.py  hotkeys.py  logger_config.py  main.py  overlay.py  paths.py  queue.py  transcription.py
tests/: test_clipboard.py  test_export.py  test_history.py  test_hotkeys.py  test_paths.py  test_queue.py  test_runtime_path.py
